--- a/server/templates/client.jade
+++ b/server/templates/client.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
-    link(href="/public/app.css", rel="stylesheet")
+    link(href="/public/css/app.css", rel="stylesheet")
   body
     #app-container
 
