validation for register

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -2,3 +2,10 @@
 .form-register {
   margin-top: 125px;
 }
+
+.invalid {
+  border-color: #e9322d;
+  -webkit-box-shadow: 0 0 6px #f8b9b7;
+  -moz-box-shadow: 0 0 6px #f8b9b7;
+  box-shadow: 0 0 6px #f8b9b7;
+}
