--- a/orders/src/scss/app.scss
+++ b/orders/src/scss/app.scss
@@ -31,6 +31,7 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     text-align: center;
     padding: 20px;
+    height: 500px;
 }
 
 .content-step .image{
