--- a/server/templates/order.jade
+++ b/server/templates/order.jade
@@ -2,10 +2,10 @@ doctype html
 html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
-    link(href="/public/orders/app.css", rel="stylesheet")
+    link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body
     #app-container
 
-  script(src="/public/orders/vendor.js")
-  script(src="/public/orders/build.js")
+  script(src="/public/orders/vendor.js?timestamp=#{timestamp}")
+  script(src="/public/orders/build.js?timestamp=#{timestamp}")
 
