--- a/server/templates/partner.jade
+++ b/server/templates/partner.jade
@@ -2,9 +2,9 @@ doctype html
 html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
-    link(href="/public/partners/app.css", rel="stylesheet")
+    link(href="/public/partners/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body
     #app-container
 
-  script(src="/public/partners/vendor.js")
-  script(src="/public/partners/build.js")
+  script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
+  script(src="/public/partners/build.js?timestamp=#{timestamp}")
