--- a/client/src/scss/ui_tabs.scss
+++ b/client/src/scss/ui_tabs.scss
@@ -27,9 +27,9 @@
       background: #FFFFFF;
       -webkit-border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
-    -webkit-box-shadow: 0 -5px 5px rgba(146,119,48,0.18);
-    -moz-box-shadow: 0 -5px 5px rgba(146,119,48,0.18);
-    box-shadow: 0 -8px 16px rgba(146,119,48,0.18);
+    -webkit-box-shadow: 0 8px 12px rgba(58, 51, 46, 0.26);
+  -moz-box-shadow: 0 8px 12px rgba(58, 51, 46, 0.26);
+  box-shadow: 0 8px 12px rgba(58, 51, 46, 0.26);
     }
   }
 }
@@ -46,6 +46,6 @@
   box-shadow: 0 8px 12px rgba(58, 51, 46, 0.26);
   margin-bottom: 30px;
   position: relative;
-  z-index: 0;
+  z-index: 5;
   padding: 15px;
 }
