--- a/client/src/scss/ui_common.scss
+++ b/client/src/scss/ui_common.scss
@@ -1,3 +1,7 @@
+html, body, #app-container{
+  height: 100%;
+}
+
 .clearfix{
   &:before{
     display: table;
@@ -24,4 +28,12 @@
   position: relative;
   z-index: 0;
   padding: 15px;
+}
+
+.app{
+  width: 85%;
+  margin: 20px auto;
+  //background-color: #fff;
+  min-height: calc(100% - 40px);
+  padding-top: 1px;
 }
