--- a/client/src/scss/ui_navigation.scss
+++ b/client/src/scss/ui_navigation.scss
@@ -1,13 +1,13 @@
-.navbar{
-      -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
-    -moz-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
-    box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
+.navbar {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
+  -moz-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
+  box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
 
-  .navbar-brand{
-        display: block;
+  .navbar-brand {
+    display: block;
     font-size: 17px;
     line-height: 30px;
     font-weight: 700;
@@ -18,8 +18,7 @@
     border-bottom: 3px solid transparent;
   }
 
-  .navbar-nav>li>a {
-    color: #777;
+  .navbar-nav > li > a {
     display: block;
     font-size: 17px;
     line-height: 30px;
@@ -30,44 +29,52 @@
     padding: 18px 23px 12px 16px;
     border-bottom: 3px solid transparent;
 
-    &:hover{
-        background: #f8f3f0;
+    &:hover {
+      background: #f8f3f0;
       border-bottom: 3px solid #4daf7b;
     }
 
-    &:focus{
-        background: #f8f3f0;
+    &:focus {
+      background: #f8f3f0;
       border-bottom: 3px solid #4daf7b;
     }
-}
 
-  .dropdown{
+    &.active {
+      background: #f8f3f0;
+      border-bottom: 3px solid #4daf7b;
+    }
+  }
 
-    i{
-          margin-right: 10px;
-        }
+  .dropdown {
 
-    .dropdown-menu{
-      width: 100%!important;
+    i {
+      margin-right: 10px;
+    }
+
+    .dropdown-menu {
+      width: 100% !important;
       min-width: 0;
 
-      a{
+      a {
         font-size: 13px;
-    line-height: 17px;
-    padding: 10px 16px !important;
-    background: #fff;
-    border-left: 3px solid transparent;
-    border-bottom: 0 none;
+        line-height: 17px;
+        padding: 10px 16px !important;
+        background: #fff;
+        border-left: 3px solid transparent;
+        border-bottom: 0 none;
         font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    color: #8e8071;
+        text-transform: uppercase;
+        letter-spacing: -1px;
+        color: #8e8071;
 
+        &:hover {
+          background: #f8f3f0;
+          border-left: 3px solid #4daf7b;
+        }
 
-
-        &:hover{
-              background: #f8f3f0;
-    border-left: 3px solid #4daf7b;
+        &.active {
+          background: #f8f3f0;
+          border-left: 3px solid #4daf7b;
         }
       }
     }
