--- a/partners/src/scss/app.scss
+++ b/partners/src/scss/app.scss
@@ -1,5 +1,1 @@
-@import './../../../node_modules/bootstrap/dist/css/bootstrap.min';
-
-.form-register {
-  margin-top: 125px;
-}
+@import './../../../common/scss/app';
