--- a/orders/src/scss/app.scss
+++ b/orders/src/scss/app.scss
@@ -1,1 +1,15 @@
 @import './../../../common/scss/app';
+
+.title {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+    text-align: center;
+}
+
+.btn-order {
+    margin: 15px;
+}
+
+.form-margin {
+    margin-top: 40px;
+}
