--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -1,9 +1,9 @@
 @import './../../../common/scss/app';
 
-.no-margin {
-  margin: 0px;
-}
-
 .btn-submit {
     margin: 15px;
+}
+
+.product-form {
+  margin-bottom: 20px;
 }
