--- a/orders/src/scss/app.scss
+++ b/orders/src/scss/app.scss
@@ -13,3 +13,23 @@
 .form-margin {
     margin-top: 40px;
 }
+
+pre{
+    display: block;
+    padding: 0;
+    margin: 0;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: inherit;
+    word-wrap: initial;
+    background-color: #FFFFFF;
+    border: 0;
+    border-radius: 0;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    white-space: pre-line;
+}
+
+.panel{
+        padding-bottom: 15px;
+}
