--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -41,3 +41,9 @@ body{
 .text-danger {
   color: #BB2724;
 }
+
+.error-block {
+  text-align: center;
+  padding: 130px;
+  background-color: rgba(232, 97, 58, 0.43);
+}
