--- a/server/templates/error.jade
+++ b/server/templates/error.jade
@@ -3,5 +3,5 @@ html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
   body
-
+    img(src="/public/images/404.jpg")
 
