--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -45,8 +45,15 @@ body{
 .error-block {
   text-align: center;
   padding: 130px;
-  background-color: rgba(232, 97, 58, 0.43);
+  background-color: rgba(214, 62, 19, 0.68);
 }
+
+div.error-block div.btn {
+    background: #f2fafe;
+    border: 1px solid #f2fafe;
+    background: -moz-linear-gradient(top, #fff 0%, #DAD1CF 2%, #EFDCD8 100%);
+    background: -webkit-linear-gradient(top, #fff 0%, #DAD1CF 2%, #EFDCD8 100%);
+  }
 
 
 .input-group-inline input.form-control.input-lg {
