made log module

--- a/server/templates/client.jade
+++ b/server/templates/client.jade
@@ -7,6 +7,6 @@ html
     link(href="/public/client/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body
     #app-container
-
+  script(src="/public/clientLog.js")
   script(src="/public/client/vendor.js?timestamp=#{timestamp}")
   script(src="/public/client/build.js?timestamp=#{timestamp}")
