changed rate`s style

--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -16,6 +16,11 @@
 
 @import "auth";
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 body{
   font-family: 'Open Sans', sans-serif;
     font-weight: 400;
