--- a/common/scss/ui_input.scss
+++ b/common/scss/ui_input.scss
@@ -13,6 +13,10 @@ input[type="text"], input[type="password"], input[type="email"], textarea {
   }
 }
 
+.input-label {
+  padding: 10px;
+}
+
 .password-field{
   position: relative;
 
