--- a/server/templates/pending.jade
+++ b/server/templates/pending.jade
@@ -4,7 +4,7 @@ html(lang='en')
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body
-      script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
+      script(src="/public/orders/vendor.js?timestamp=#{timestamp}")
       div
           form#form.panel.panel-default.col-md-10.col-md-offset-1.form-margin.boxed(action='#{formSettings.action}' method='#{formSettings.method}')
               include ./partial/alert.jade
