--- a/server/vidjets/basket/basket.css
+++ b/server/vidjets/basket/basket.css
@@ -1,14 +1,24 @@
 #basket {
-  background: url("https://pixabay.com/static/uploads/photo/2015/10/22/16/42/icon-1001596_960_720.png") no-repeat no-repeat;
-  text-align: center;
-  background-size: 100%;
-  width: 100px;
-  height: 100px;
+    width: 150px;
+    background-color: #FDFDFD;
+    border: 1px solid #ccc;
 }
 
-#basket a {
-  color: #C51E1E;
-  text-decoration: none;
-  padding-top: 30px;
-  font-size: xx-large;
+#basket div.basket-picture {
+  background: url("https://pixabay.com/static/uploads/photo/2015/10/22/16/42/icon-1001596_960_720.png") no-repeat no-repeat;
+    text-align: center;
+    background-size: 100%;
+    width: 40%;
+    height: 50px;
+    display: inline-block;
+}
+
+#basket div.basket-quantity {
+  display: inline-block;
+    line-height: 50px;
+    vertical-align: top;
+    /* text-align: center; */
+    height: 50px;
+    width: 60%;
+    padding-left: 15px;
 }
