individual partners fee

--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -68,7 +68,8 @@ div.error-block div.btn {
 }
 
 .input-group-btn:last-child>.btn {
-   line-height: 27px;
+    line-height: 21px;
+    vertical-align: top;
 }
 
 .list-head {
