--- a/server/templates/admin/page.jade
+++ b/server/templates/admin/page.jade
@@ -67,14 +67,15 @@ html
                                     if u.type === 'client'
                                         .text-center #{u.tariff_date ? new Date(u.tariff_date).toLocaleString("ru") : '-'}
                                 td
-                                    form(action='#{action + "/admin/user/tariff?_method=PUT"}' method="POST" encType="application/x-www-form-urlencoded")
-                                        input(type="hidden", name="_method", value="PUT")
-                                        input(type="hidden", name="id", value='#{u.id}')
-                                        input(type="hidden", name="tariff_payed", value='#{!u.tariff_payed}')
-                                        if u.tariff_payed
-                                            button.glyphicon.glyphicon-ok-circle.btn.btn-default.btn-action
-                                        else
-                                            button.glyphicon.glyphicon-ban-circle.btn.btn-danger.btn-action
+                                    if u.type === 'client'
+                                        form(action='#{action + "/admin/user/tariff?_method=PUT"}' method="POST" encType="application/x-www-form-urlencoded")
+                                            input(type="hidden", name="_method", value="PUT")
+                                            input(type="hidden", name="id", value='#{u.id}')
+                                            input(type="hidden", name="tariff_payed", value='#{!u.tariff_payed}')
+                                            if u.tariff_payed
+                                                button.glyphicon.glyphicon-ok-circle.btn.btn-default.btn-action
+                                            else
+                                                button.glyphicon.glyphicon-ban-circle.btn.btn-danger.btn-action
                                 td
                                     form(action='#{action + "/admin/" + u.type + "/login"}' method="POST" encType="application/x-www-form-urlencoded")
                                         input(type="hidden", name="id", value='#{u.id}')
