--- a/server/templates/basket.jade
+++ b/server/templates/basket.jade
@@ -31,6 +31,9 @@ html(lang='en')
               h5
                   b Общая цена:
                     span#total
+
+          .pull-left.btn.btn-default
+              a(href='#{redirectBack}') Назад
           input#submit.btn.pull-right(type='submit', value='Перейти к оформлению')
 
           input(type='hidden', name="basketItems", value='#{JSON.stringify(basketItems)}')
