--- a/server/templates/basket.jade
+++ b/server/templates/basket.jade
@@ -7,7 +7,7 @@ html(lang='en')
       script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
       form#basket.boxed.col-md-offset-1.col-md-10.form-margin
           h3 Корзина
-          .btn.btn-default.glyphicon.glyphicon-refresh.pull-right  Обновить
+          .btn.btn-default.glyphicon.glyphicon-refresh.pull-right.hide  Обновить
           table.table.table-hover.list
               thead
                   tr
