--- a/server/templates/basketPending.jade
+++ b/server/templates/basketPending.jade
@@ -7,7 +7,7 @@ html(lang='en')
       script(src="/public/orders/vendor.js?timestamp=#{timestamp}")
       form#form.boxed.col-md-offset-1.col-md-10.form-margin
           include ./partial/alert.jade
-          h3 Корзина
+          h3 Оформление заказа
           .col-md-6
               table.table.table-hover.list
                   thead
