--- a/server/templates/payments/yandex.jade
+++ b/server/templates/payments/yandex.jade
@@ -1,8 +1,8 @@
 
 form#yandex.hide(method='POST', action='#{payments.yandex.action}')
         input(type='hidden', name='receiver', value='#{payments.yandex.receiver}')
-        input(type='hidden', name='formcomment', value='#{payments.yandex.formcomment}')
-        input(type='hidden', name='short-dest', value='#{payments.yandex["short-dest"]}')
+        input(type='hidden', name='formcomment', value='#{payments.yandex.formcomment.name}')
+        input(type='hidden', name='short-dest', value='#{payments.yandex["short-dest"].name}')
         input(type='hidden', name='label', value='#{payments.yandex.label}')
         input(type='hidden', name='targets', value='#{payments.yandex.targets}')
         input(type='hidden', name='quickpay-form', value='donate')
