--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -16,6 +16,17 @@
 
 @import "auth";
 
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  width: 99%;
+
+
+}
+
 .row {
   margin-left: 0px;
   margin-right: 0px;
