--- a/server/templates/basket.jade
+++ b/server/templates/basket.jade
@@ -7,7 +7,7 @@ html(lang='en')
       script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
       form#basket.boxed.col-md-offset-1.col-md-10.form-margin
           h3 Корзина
-          .btn.btn-default.glyphicon.glyphicon-refresh.pull-right.hide  Обновить
+          div#refresh.btn.btn-default.glyphicon.glyphicon-refresh.pull-right  Обновить
           table.table.table-hover.list
               thead
                   tr
@@ -34,7 +34,7 @@ html(lang='en')
                     span#total
 
           .pull-left.btn.btn-default
-              a(href='#{redirectBack}') Назад
+              a.text(href='#{redirectBack}') Назад
           input#submit.btn.pull-right(type='submit', value='Перейти к оформлению')
 
           input(type='hidden', name="basketItems", value='#{JSON.stringify(basketItems)}')
