--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -1,4 +1,4 @@
-@import './../../../common/scss/app';
+@import '../../../common/scss/app';
 @import './vendors/datepicker';
 
 .btn-submit {
@@ -40,18 +40,3 @@
     width: 60%;
     padding-left: 15px;
 }
-
-/*#basket {
-  background: url("https://pixabay.com/static/uploads/photo/2015/10/22/16/42/icon-1001596_960_720.png") no-repeat no-repeat;
-  text-align: center;
-  background-size: 100%;
-  width: 100px;
-  height: 100px;
-}
-
-#basket a {
-  color: #C51E1E;
-  text-decoration: none;
-  padding-top: 30px;
-  font-size: xx-large;
-}*/
