--- a/server/templates/basket.jade
+++ b/server/templates/basket.jade
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
-  body
+  body(class=designClass)
       script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
       form#basket.boxed.col-md-offset-1.col-md-10.form-margin
           h3 Корзина
