--- a/server/templates/order.jade
+++ b/server/templates/order.jade
@@ -3,7 +3,7 @@ html
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
-  body
+  body(class=designClass)
     #app-container
 
   script(src="/public/orders/vendor.js?timestamp=#{timestamp}")
