--- a/server/templates/payment.jade
+++ b/server/templates/payment.jade
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
-  body
+  body(class=designClass)
       script(src="/public/orders/vendor.js?timestamp=#{timestamp}")
       html
           body
