--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -92,11 +92,44 @@
 
   background: #f1f3f6;
 
+  label, span {
+     font-weight: 100;
+    font-size: inherit;
+  }
+
+  h4 {
+    font-size: 16px;
+  }
+
+  h3 {
+    font-size: 19px;
+  }
+
+  b {
+    font-weight: 100;
+    color: #616469;
+  }
+
+  .text-warning {
+    color: #585D65;
+  }
+
+  .text-danger {
+    color: #E63C3C;
+  }
+
+  .form-ui {
+    padding: 40px;
+  }
+
   @import "design2/auth";
   @import "design2/ui_common";
   @import 'design2/ui_tabs';
   @import 'design2/ui_input';
   @import 'design2/ui_navigation';
   @import 'design2/ui_table';
+  @import 'design2/ui_button';
+  @import 'design2/ui_alert';
+  @import 'design2/ui_block';
 
 }
