--- a/common/scss/design2/ui_common.scss
+++ b/common/scss/design2/ui_common.scss
@@ -16,18 +16,19 @@ html, body, #app-container{
 
 }
 
+.row {
+   padding-right: 15px;
+   padding-left: 15px;
+  }
+
 .boxed {
   background: #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
-  -moz-box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
-  box-shadow: 0 0 12px rgba(58, 51, 46, 0.26);
   margin-bottom: 30px;
   position: relative;
   z-index: 0;
   padding: 15px;
+  color: #76787B;
+  border: 1px solid #EAEAEA;
 }
 
 .app{
