--- a/common/scss/design2/ui_navigation.scss
+++ b/common/scss/design2/ui_navigation.scss
@@ -49,25 +49,24 @@
       min-width: 0;
 
       a {
-        font-size: 13px;
+        font-size: 14px;
         line-height: 17px;
         padding: 10px 16px !important;
         background: #fff;
         border-left: 3px solid transparent;
         border-bottom: 0 none;
-        font-weight: 700;
-        text-transform: uppercase;
+        font-weight: 100;
         letter-spacing: -1px;
         color: #8e8071;
 
         &:hover {
           background: #f8f3f0;
-          border-left: 3px solid #4daf7b;
+          /*border-left: 3px solid #4daf7b;*/
         }
 
         &.active {
           background: #f8f3f0;
-          border-left: 3px solid #4daf7b;
+          /*border-left: 3px solid #4daf7b;*/
         }
       }
     }
@@ -77,5 +76,6 @@
 
  .navbar-default {
     background-color: #FFFFFF;
-    border-color: #e7e7e7;
+    border-radius: 0;
+    border: 1px solid #EAEAEA;
  }
